@startuml

struct Complex {
+ real: Double
+ imag: Double

+ override toString(): String
+ fun arg(): Double
+ fun abs(): Double
}

class DemoApplication {
+ override start(stage: Stage)
}

class LauncherKt {
+ main()
}

class Controller {
- label: Label
- inputReal: TextField
- inputImag: TextField
- subject: Complex?

- showError(text: String)
- hideError()
- readField(widget: TextField, name: String): Double?
- createFromFields(): Complex?

- onToStringButtonClick()
- onAbsButtonClick()
- onArgButtonClick()
}

class window-fxml

Controller o-- Complex

LauncherKt --> DemoApplication

abstract class javafx.application.Application

DemoApplication ..|> javafx.application.Application

DemoApplication --> "window-fxml"

"window-fxml" --> Controller

'Application --> Controller

@enduml